--- a/_posts/2016-07-26-最优化小结.md
+++ b/_posts/2016-07-26-最优化小结.md
@@ -2,7 +2,7 @@
 layout: post
 title:  最优化方法小结
 date:   2016-07-26 11:40:18 +0800
-categories: machine learning
+categories: machine_learning
 tags: 最优化
 author: EthanCao
 ---
@@ -137,11 +137,11 @@ $$\theta_{k+1}=\theta_k+\alpha d_k$$
 
 函数$f(x,y)$的图像如图所示，纵轴代表函数值。
 
-![2](fig/2.jpg)
+![2](/img/posts/opt/2.jpg)
 
 它在二维平面的等高线如图所示。
 
-![1](fig/1.jpg)
+![1](/img/posts/opt/1.jpg)
 
 我们运行最速下降，可以看到(i)多个极值点，根据初始值不同，随机寻找一个；(ii)等值线接近圆形，下降较快，椭圆则较慢。 这是因为寻优过程总是呈锯齿状。根据最优步长公式：$\Delta f(\theta_{k+1})d_k=-d_{k+1}d_k=0$
 
@@ -159,7 +159,7 @@ $$\theta_{k+1}=\theta_k+\alpha d_k$$
 
 刚才讨论了最速方向其实只用了函数的一阶导数信息，牛顿法则是可以考虑函数的二阶信息。这样做的好处在于收敛速度更快，因为是二阶收敛。形象一点的解释是一阶导数考虑当前坡度是否够大，而二阶导数还考虑走了这一步之后，坡度是否变的更大。尤其对于上面提到的椭圆慢的问题，有较好的效果。如下图，红色是牛顿法，绿色是最速法的迭代路径。
 
- ![3](fig/3.jpg)
+ ![3](/img/posts/opt/3.jpg)
 
 具体算法：
 
@@ -243,7 +243,7 @@ $$B_{k+1}^{-1}=V_k^TB_k^{-1}V_k+\rho_kx_kx_k^T$$
 
 由此可见，计算$B_k^{-1}$需要用到$\{x_i,y_i\}_{i=0}^k$，自然的，我们只保留最近的m组。这样就只能近似计算。但是即使近似计算公式也很复杂。索性我们只需要计算$B_k^{-1}g_k$得到下降方向，这里已经有人给出快速计算的方法。
 
- ![4](fig/4.png)
+ ![4](/img/posts/opt/4.png)
 
 详细证明过程可以参考文献[3].
 
