--- a/_posts/2016-07-25-opt.md
+++ b/_posts/2016-07-25-opt.md
@@ -19,15 +19,15 @@ author: EthanCao
 
 在机器学习中，通常给定一个模型和观察数据，此时模型的参数是未知的，因此我们的目的是通过观察数据得出模型参数，也就是训练过程。那么怎么通过观察数据拟合模型参数呢？通常可以定义模型的似然函数、损失函数或是能量系统的能量函数，它们分别从不同角度考虑拟合，但目的都是一样的，即寻找极值点，此时最优化就是一种求解的手段。
 
-> 似然函数通常由最大似然（MLE）和最大后验（MAP），前者是最大化条件概率$P(x|\theta)$，物理解释是求解这样一组参数$\theta$，使得观察数据$x$出现的概率最大，因为目标是衡量模型和数据的相似程度，所以叫最大似然估计；后者实际上是最大化参数的后验概率$P(\theta|x)$，物理解释是观察数据通常与真实分布有误差，并且我们对模型的分布有先验知识，所以期望用先验分布$p(\theta)$来弥补数据$x$的不足，即
->
-> $$p(\theta|x)=\frac{p(x|\theta)p(\theta)}{p(x)}\propto p(x|\theta)p(\theta)$$
->
-> 这里我们用到了观察数据的分布$p(x)$通常为常数。
->
-> 以上属于判别模型，特别的还有一类生成模型可能考虑数据与模型参数之间可能含有隐变量，因此直接定义联合分布$p(x,z|\theta)$，那么$z$其实也是未知的，需要估计。那么这时可以直接使用最优化方法求解，也可以通过求得边缘分布$p(x|\theta)=\sum_z p(x,z|\theta)$，将问题转化为最大似然估计。
->
-> 损失函数和能量函数则根据模型目标来定义，比如误差函数的p范数，负log似然函数等。比如最小二乘就是使用误差函数进行参数估计的，它实际上和高斯模型下的最大似然估计结果一致。
+似然函数通常由最大似然（MLE）和最大后验（MAP），前者是最大化条件概率$P(x|\theta)$，物理解释是求解这样一组参数$\theta$，使得观察数据$x$出现的概率最大，因为目标是衡量模型和数据的相似程度，所以叫最大似然估计；后者实际上是最大化参数的后验概率$P(\theta|x)$，物理解释是观察数据通常与真实分布有误差，并且我们对模型的分布有先验知识，所以期望用先验分布$p(\theta)$来弥补数据$x$的不足，即
+
+$$p(\theta|x)=\frac{p(x|\theta)p(\theta)}{p(x)}\propto p(x|\theta)p(\theta)$$
+
+这里我们用到了观察数据的分布$p(x)$通常为常数。
+
+以上属于判别模型，特别的还有一类生成模型可能考虑数据与模型参数之间可能含有隐变量，因此直接定义联合分布$p(x,z|\theta)$，那么$z$其实也是未知的，需要估计。那么这时可以直接使用最优化方法求解，也可以通过求得边缘分布$p(x|\theta)=\sum_z p(x,z|\theta)$，将问题转化为最大似然估计。
+
+损失函数和能量函数则根据模型目标来定义，比如误差函数的p范数，负log似然函数等。比如最小二乘就是使用误差函数进行参数估计的，它实际上和高斯模型下的最大似然估计结果一致。
 
 有了需要求极值的目标函数，接下来就是使用最优化方法来求解了。
 
