--- a/_posts/2016-07-25-opt.md
+++ b/_posts/2016-07-25-opt.md
@@ -21,7 +21,7 @@ author: EthanCao
 
 似然函数通常由最大似然（MLE）和最大后验（MAP），前者是最大化条件概率$P(x|\theta)$，物理解释是求解这样一组参数$\theta$，使得观察数据$x$出现的概率最大，因为目标是衡量模型和数据的相似程度，所以叫最大似然估计；后者实际上是最大化参数的后验概率$P(\theta|x)$，物理解释是观察数据通常与真实分布有误差，并且我们对模型的分布有先验知识，所以期望用先验分布$p(\theta)$来弥补数据$x$的不足，即
 
-$$p(\theta|x)=\frac{p(x|\theta)p(\theta)}{p(x)}\propto p(x|\theta)p(\theta)$$
+$p(\theta|x)=\frac{p(x|\theta)p(\theta)}{p(x)}\propto p(x|\theta)p(\theta)$
 
 这里我们用到了观察数据的分布$p(x)$通常为常数。
 
