revise tags' interval

--- a/_posts/2016-07-25-opt.md
+++ b/_posts/2016-07-25-opt.md
@@ -2,7 +2,7 @@
 layout: post
 title:  最优化方法小结
 date:   2016-07-26 08:40:18 +0800
-categories: machine_learning
+categories: [Machine Learning]
 tags: 最优化
 author: EthanCao
 ---
