--- a/_posts/2016-07-26--ss部署.md
+++ b/_posts/2016-07-26--ss部署.md
@@ -3,7 +3,7 @@ layout: post
 title:  基于vultr的vps设置ss翻墙
 date:   2016-07-26 11:40:18 +0800
 categories: 技巧
-tags: 翻墙 shadow_socks
+tags: [翻墙,shadowsocks]
 author: EthanCao
 ---
 
