--- a/_posts/2016-07-26--ss部署.md
+++ b/_posts/2016-07-26--ss部署.md
@@ -42,4 +42,43 @@ wget ethancao.cn/attachment/centos-ss-libev.sh && chmod +x centos-ss-libev.sh &&
 
 注：此脚本将关闭iptables防火墙，如需要可添加例外后开启。
 
-本文很大程度上参考了hipda的@sngr，特此感谢！
+## 更新
+
+不知道为什么，centos突然缺少一些程序，所以以上安装方法会出现错误。
+
+解决方法是下载[asciidoc](ethancao.cn/attachment/asciidoc-8.4.5-4.1.el6.noarch.rpm)
+
+然后安装它和xmlto。再运行上面的命令就可以了。
+
+yum install asciidoc-8.4.5-4.1.el6.noarch.rpm
+
+yum -y install xmlto
+
+
+
+### 防火墙规则导致连接不上
+
+centos6.7 同遇到连不上，测试半天总算找到问题。出在默认这条规则。
+Chain INPUT
+REJECT all -- 0.0.0.0/0 0.0.0.0/0 reject-with icmp-host-prohibited
+//拒绝所有其他不符合上述任何一条规则的数据包。并且发送一条host prohibited的消息给被拒绝的主机
+//查看规则序号
+iptables -L -n --line-numbe
+//删除第x条
+iptables -D INPUT 5 //我这里第五
+//保存规则
+service iptables save
+//重启下iptables
+service iptables restart
+
+//服务器建议开iptables
+
+## 安装瑞速
+
+安装破解版锐速：
+首先需要更换内核，用putty登陆后输入命令：
+wget http://ftp.scientificlinux.org/linux/scientific/6.6/x86_64/updates/security/kernel-2.6.32-504.3.3.el6.x86_64.rpm
+安装：rpm -ivh kernel-2.6.32-504.3.3.el6.x86_64.rpm --force
+安装锐速：wget -N --no-check-certificate https://raw.githubusercontent.com/91yun/serverspeeder/master/serverspeeder-all.sh && bash serverspeeder-all.sh
+
+本文很大程度上参考了hipda的@sngr，以及https://teddysun.com/342.html/comment-page-1#comments，特此感谢！
